# credential-manager

./: .envrc  .gitignore  .hlint.yaml  .readthedocs.yml  CHANGELOG  CODEOWNERS  CONTRIBUTING  NOTICE  README.md  SECURITY.md  cabal.project  coldMint.hash  coldMint.keyhash  coldMint.native  coldMint.skey  coldMint.vkey  flake.nix  fourmolu.yaml  hotMint.hash  hotMint.keyhash  hotMint.native  hotMint.skey  hotMint.vkey  install-cc-sign-mac-os.sh  install-cc-sign-windows.ps1  mint.plutus.template
credential-manager/: .ghci  NOTICE  credential-manager.cabal
credential-manager/cc-sign/: Main.hs
credential-manager/orchestrator-cli/: Commands.hs  Main.hs  Options.hs
credential-manager/orchestrator-cli/Commands/: Authorize.hs  BurnCold.hs  BurnHot.hs  Common.hs  InitCold.hs  InitColdCredential.hs  InitColdNFT.hs  InitHot.hs  InitHotCredential.hs  InitHotNFT.hs  Resign.hs  ResignDelegation.hs  ResignMembership.hs  ResignVoting.hs  RotateCold.hs  RotateHot.hs  UnlockHot.hs  UpgradeCold.hs  UpgradeHot.hs  Vote.hs
credential-manager/orchestrator-tool/: Commands.hs  Main.hs  Options.hs
credential-manager/orchestrator-tool/Commands/: Authorize.hs  BurnHot.hs  Common.hs  InitColdCredential.hs  InitColdNFT.hs  InitHotCredential.hs  InitHotNFT.hs  Resign.hs  ResignDelegation.hs  ResignVoting.hs  RotateCold.hs  RotateHot.hs  UnlockCold.hs  UnlockHot.hs  Vote.hs
credential-manager/orchestrator/CredentialManager/Orchestrator/: AuthorizeHot.hs  Common.hs  InitCold.hs  InitColdCommittee.hs  InitColdNFT.hs  InitHot.hs  InitHotCommittee.hs  InitHotNFT.hs  InitMinting.hs  Resign.hs  ResignDelegation.hs  ResignMembership.hs  ResignVoting.hs  RotateCold.hs  RotateHot.hs  Vote.hs
credential-manager/plutus-scripts/CredentialManager/: Scripts.hs  ScriptsV2.hs
credential-manager/plutus-scripts/CredentialManager/Debug/: Scripts.hs  ScriptsV2.hs
credential-manager/signing-tool/: Main.hs  Options.hs  TxSummary.hs
credential-manager/signing-tool/Components/: AddSigningKeyButton.hs  Common.hs  ImportTxButton.hs  MainButtons.hs  NewCredentialButton.hs  NewKeyPairButton.hs  SignTransactionButton.hs  TxView.hs
credential-manager/signing-tool/TxSummary/: Common.hs  Error.hs
credential-manager/src/CredentialManager/: Api.hs
credential-manager/src/CredentialManager/Scripts/: ColdCommittee.hs  ColdNFT.hs  Common.hs  HotCommittee.hs  HotNFT.hs  Minting.hs
credential-manager/test/: SpecHook.hs
credential-manager/test/CredentialManager/: Gen.hs
credential-manager/test/CredentialManager/Scripts/: ColdCommitteeSpec.hs  ColdNFTSpec.hs  HotCommitteeSpec.hs  HotNFTSpec.hs
credential-manager/test/CredentialManager/Scripts/ColdNFT/: AuthorizeSpec.hs  BurnColdSpec.hs  ResignColdSpec.hs  ResignDelegationSpec.hs  ResignMembershipSpec.hs  RotateColdSpec.hs  UnlockColdSpec.hs  UpgradeColdSpec.hs
credential-manager/test/CredentialManager/Scripts/HotNFT/: BurnHotSpec.hs  ResignVotingSpec.hs  RotateHotSpec.hs  UnlockHotSpec.hs  UpgradeHotSpec.hs  VoteSpec.hs
credential-manager/test/OrchestratorCLI/: CommandsSpec.hs  GuideSpec.hs  TestCommon.hs
credential-manager/test/OrchestratorCLI/TestCommon/: CertHierarchy.hs  HSpecExtra.hs  Orchestrator.hs  Testnet.hs  Turtle.hs
doc/read-the-docs-site/: conf.py  index.rst  requirements.txt  system-overview.rst
doc/read-the-docs-site/background/: cc-credentials.rst  credentials.rst  index.rst
doc/read-the-docs-site/cc-sign/: index.rst  installation.rst  usage.rst
doc/read-the-docs-site/orchestrator-cli/: authorize.rst  burn.rst  index.rst  init-cold-committee.rst  init-cold-nft.rst  init-cold.rst  init-hot-committee.rst  init-hot-nft.rst  init-hot.rst  resign-delegation.rst  resign-membership.rst  resign-voting.rst  resign.rst  rotate-cold.rst  rotate-hot.rst  setup.rst  unlock.rst  upgrade.rst  vote.rst
doc/read-the-docs-site/scripts/: cold-committee.rst  cold-nft.rst  hot-committee.rst  hot-nft.rst  index.rst
doc/read-the-docs-site/system-overview/: auditing.rst  cold-committee.rst  cold-minting.rst  cold-nft.rst  hot-committee.rst  hot-minting.rst  hot-nft.rst  index.rst  roles.rst
doc/read-the-docs-site/tx-bundle/: index.rst
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/background/: credentials.rst.txt
docs/_sources/orchestrator-cli/: index.rst.txt  init-cold-committee.rst.txt  init-cold-nft.rst.txt  init-hot-committee.rst.txt  init-hot-nft.rst.txt  resign-delegation.rst.txt  resign-voting.rst.txt  unlock.rst.txt  vote.rst.txt
docs/_sources/system-overview/: cold-nft.rst.txt  hot-committee.rst.txt  hot-nft.rst.txt  index.rst.txt
docs/background/: cc-credentials.html  credentials.html  index.html
docs/orchestrator-cli/: index.html  init-cold-committee.html  init-cold-nft.html  init-hot-committee.html  init-hot-nft.html  resign-delegation.html  resign-voting.html  resign.html  rotate-cold.html  rotate-hot.html  unlock.html  vote.html
docs/system-overview/: auditing.html  cold-committee.html  cold-nft.html  hot-committee.html  hot-nft.html  index.html  roles.html
example-certificates/: child-1.cert  child-2.cert  child-3.cert  child-4.cert  child-5.cert  child-6.cert  child-7.cert  child-8.cert  child-9.cert
example-certificates/children/child-1/: child-1.csr  child-1.private
example-certificates/children/child-2/: child-2.csr  child-2.private
example-certificates/children/child-3/: child-3.csr  child-3.private
example-certificates/children/child-4/: child-4.csr  child-4.private
example-certificates/children/child-5/: child-5.csr  child-5.private
nix/: ghcide-workaround.diff  outputs.nix  project.nix  shell.nix
nix/jsonld-nix/: default.nix  node-packages.nix  package.json
reactive-banana-gi-gtk/: reactive-banana-gi-gtk.cabal
reactive-banana-gi-gtk/src/Reactive/Banana/GI/: Gtk.hs
testnet/scripts/: cc1and2vote.sh  cc3vote.sh  drepsvote.sh  pconstitution.sh  proposeConstitution.sh  registerdreps.sh  setup-cc.sh
tx-dynamic/: tx-dynamic.cabal
tx-dynamic/app/: Main.hs
tx-dynamic/src/Cardano/: TxDynamic.hs
tx-dynamic/src/Data/Word/: Extra.hs
(+12 files in other folders)
