cabal-version: 3.4
name:          credential-manager
version:       0.1.0.0
synopsis:
  Credential management smart contracts for members of the Cardano constitutional committee

author:
  Thomas Vellekoop
  Jamie Bertram

maintainer:    jamie.bertram@iohk.io
license-files:
  LICENSE
  NOTICE

build-type:    Simple

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common base
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wunused-packages -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          base
  exposed-modules:
    CredentialManager.Api
    CredentialManager.Scripts.ColdCommittee
    CredentialManager.Scripts.ColdNFT
    CredentialManager.Scripts.HotCommittee
    CredentialManager.Scripts.HotNFT

  other-modules:   Paths_credential_manager
  hs-source-dirs:  src
  build-depends:
    , base >=4.18 && <5
    , bytestring ^>=0.11
    , cardano-api ^>=8.45.0
    , crypton ^>=0.34
    , crypton-x509 ^>=1.7
    , memory ^>=0.18
    , pem ^>=0.2
    , plutus-ledger-api ^>=1.23
    , plutus-tx ^>=1.23
    , prettyprinter

library plutus-scripts
  import:          base
  exposed-modules: CredentialManager.Scripts
  hs-source-dirs:  plutus-scripts
  ghc-options:     -Wno-unused-packages
  build-depends:
    , base >=4.18 && <5
    , credential-manager
    , plutus-ledger-api ^>=1.23
    , plutus-tx ^>=1.23
    , plutus-tx-plugin ^>=1.23

executable orchestrator-tool
  import:         base
  hs-source-dirs: orchestrator-tool
  main-is:        Main.hs
  other-modules:
    Commands
    Commands.Authorize
    Commands.Common
    Commands.InitColdCredential
    Commands.InitColdNFT
    Commands.InitHotCredential
    Commands.InitHotNFT
    Commands.Resign
    Options
    Paths_credential_manager

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16
    , bytestring
    , cardano-api
    , credential-manager:{credential-manager, plutus-scripts}
    , directory
    , filepath
    , optparse-applicative
    , plutus-ledger-api
    , plutus-tx
    , text

  ghc-options:    -threaded
