cabal-version: 3.4
name:          credential-manager
version:       0.1.0.0
synopsis:
  Credential management smart contracts for members of the Cardano constitutional committee

author:
  Thomas Vellekoop
  Jamie Bertram

maintainer:    jamie.bertram@iohk.io
license-files:
  LICENSE
  NOTICE

build-type:    Simple

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common base
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wunused-packages -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:          base
  exposed-modules:
    CredentialManager.Api
    CredentialManager.Scripts.ColdCommittee
    CredentialManager.Scripts.ColdNFT
    CredentialManager.Scripts.HotCommittee
    CredentialManager.Scripts.HotNFT
    CredentialManager.Scripts.Minting

  other-modules:
    CredentialManager.Scripts.Common
    Paths_credential_manager

  hs-source-dirs:  src
  build-depends:
    , base >=4.18 && <5
    , bytestring ^>=0.11
    , cardano-api ^>=8.46.0
    , crypton ^>=0.34
    , crypton-x509 ^>=1.7
    , memory ^>=0.18
    , pem ^>=0.2
    , plutus-ledger-api ^>=1.27
    , plutus-tx ^>=1.27
    , prettyprinter

library plutus-scripts
  import:          base
  exposed-modules:
    CredentialManager.Debug.Scripts
    CredentialManager.Debug.ScriptsV2
    CredentialManager.Scripts
    CredentialManager.ScriptsV2

  hs-source-dirs:  plutus-scripts
  ghc-options:     -Wno-unused-packages
  build-depends:
    , base >=4.18 && <5
    , credential-manager
    , plutus-ledger-api ^>=1.27
    , plutus-tx ^>=1.27
    , plutus-tx-plugin ^>=1.27

library orchestrator
  import:          base
  exposed-modules:
    CredentialManager.Orchestrator.AuthorizeHot
    CredentialManager.Orchestrator.Common
    CredentialManager.Orchestrator.InitCold
    CredentialManager.Orchestrator.InitHot
    CredentialManager.Orchestrator.Resign
    CredentialManager.Orchestrator.ResignDelegation
    CredentialManager.Orchestrator.ResignMembership
    CredentialManager.Orchestrator.ResignVoting
    CredentialManager.Orchestrator.RotateCold
    CredentialManager.Orchestrator.RotateHot
    CredentialManager.Orchestrator.Vote

  other-modules:   Paths_credential_manager
  hs-source-dirs:  orchestrator
  build-depends:
    , base >=4.18 && <5
    , bytestring
    , cardano-api ^>=8.46.0
    , cardano-ledger-conway
    , containers
    , credential-manager:{credential-manager, plutus-scripts}
    , plutus-ledger-api ^>=1.27
    , plutus-tx ^>=1.27

executable orchestrator-cli
  import:         base
  hs-source-dirs: orchestrator-cli
  main-is:        Main.hs
  other-modules:
    Commands
    Commands.Authorize
    Commands.BurnCold
    Commands.BurnHot
    Commands.Common
    Commands.InitCold
    Commands.InitHot
    Commands.Resign
    Commands.ResignDelegation
    Commands.ResignMembership
    Commands.ResignVoting
    Commands.RotateCold
    Commands.RotateHot
    Commands.UpgradeCold
    Commands.UpgradeHot
    Commands.Vote
    Options
    Paths_credential_manager

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16
    , bytestring
    , cardano-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , containers
    , credential-manager:{credential-manager, orchestrator, plutus-scripts}
    , directory
    , filepath
    , optparse-applicative
    , plutus-ledger-api
    , plutus-tx
    , text

  ghc-options:    -threaded

test-suite credential-manager-tests
  import:             base
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    CredentialManager.Gen
    CredentialManager.Scripts.ColdCommitteeSpec
    CredentialManager.Scripts.ColdNFT.AuthorizeSpec
    CredentialManager.Scripts.ColdNFT.ResignColdSpec
    CredentialManager.Scripts.ColdNFT.ResignDelegationSpec
    CredentialManager.Scripts.ColdNFT.RotateColdSpec
    CredentialManager.Scripts.ColdNFT.UnlockColdSpec
    CredentialManager.Scripts.ColdNFTSpec
    CredentialManager.Scripts.HotCommitteeSpec
    CredentialManager.Scripts.HotNFT.BurnHotSpec
    CredentialManager.Scripts.HotNFT.ResignVotingSpec
    CredentialManager.Scripts.HotNFT.RotateHotSpec
    CredentialManager.Scripts.HotNFT.VoteSpec
    CredentialManager.Scripts.HotNFTSpec
    Paths_credential_manager
    SpecHook

  build-depends:
    , base
    , bytestring
    , containers
    , credential-manager
    , hspec
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded
