cabal-version: 3.4
name:          tx-dynamic
version:       0.1.0.0
synopsis:
  Sign multisig transactions without knowing the fixed set of signers in advance.

author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
license-files:
  ../LICENSE
  ../NOTICE

build-type:    Simple

common base
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wunused-packages -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          base
  exposed-modules: Cardano.TxDynamic
  other-modules:   Data.Word.Extra
  hs-source-dirs:  src
  build-depends:
    , base
    , binary
    , bytestring
    , cardano-api
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-conway
    , cardano-ledger-core
    , containers
    , lens
    , text
    , vector

executable tx-bundle
  import:         base
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:  Paths_tx_dynamic
  build-depends:
    , base
    , base16
    , binary
    , cardano-api
    , cardano-cli
    , cardano-crypto-class
    , containers
    , directory
    , filepath
    , optparse-applicative-fork
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
    , tx-dynamic
    , uuid
    , vector

  if os(windows)
    buildable: False
